fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3019,9 +3019,9 @@ input, select, textarea {
 					font-size: 1.25em;
 				}
 
-					#header h1 br {
+					/* #header h1 br {
 						display: none;
-					}
+					} */
 
 				#header > .inner {
 					margin-bottom: 0;
@@ -3054,9 +3054,9 @@ input, select, textarea {
 
 		/* Basic */
 
-			h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
+			/* h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
 				display: none;
-			}
+			} */
 
 		/* List */
 
@@ -3083,9 +3083,9 @@ input, select, textarea {
 					font-size: 1.75em;
 				}
 
-					#header h1 br {
+					/* #header h1 br {
 						display: inline;
-					}
+					} */
 
 		/* Footer */
 
@@ -3218,9 +3218,9 @@ input, select, textarea {
 				padding: 4.5em 1.5em;
 			}
 
-				#header h1 br {
+				/* #header h1 br {
 					display: none;
-				}
+				} */
 
 		/* Footer */
 
